# roomestim

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES_v0.1.1.md  RELEASE_NOTES_v0.10.0.md  RELEASE_NOTES_v0.10.1.md  RELEASE_NOTES_v0.11.0.md  RELEASE_NOTES_v0.12-web.0.md  RELEASE_NOTES_v0.12-web.1.md  RELEASE_NOTES_v0.12-web.4.md  RELEASE_NOTES_v0.12-web.5.md  RELEASE_NOTES_v0.12-web.6.md  RELEASE_NOTES_v0.12.0.md  RELEASE_NOTES_v0.13.0.md  RELEASE_NOTES_v0.14.0.md  RELEASE_NOTES_v0.15.0.md  RELEASE_NOTES_v0.15.1.md  RELEASE_NOTES_v0.15.2.md  RELEASE_NOTES_v0.16.0.md  RELEASE_NOTES_v0.16.1.md  RELEASE_NOTES_v0.17.0.md  RELEASE_NOTES_v0.18.0.md  RELEASE_NOTES_v0.18.1.md  RELEASE_NOTES_v0.18.2.md  RELEASE_NOTES_v0.18.3.md  RELEASE_NOTES_v0.18.4.md  RELEASE_NOTES_v0.18.5.md  RELEASE_NOTES_v0.19.0.md  RELEASE_NOTES_v0.2.0_v0.3.0.md  RELEASE_NOTES_v0.20.0.md  RELEASE_NOTES_v0.21.0.md  RELEASE_NOTES_v0.22.0.md  RELEASE_NOTES_v0.22.1.md  RELEASE_NOTES_v0.24.0.md  RELEASE_NOTES_v0.25.0.md  RELEASE_NOTES_v0.25.1.md  RELEASE_NOTES_v0.25.2.md  RELEASE_NOTES_v0.25.3.md  RELEASE_NOTES_v0.4.0.md  (+9 more)
.github/workflows/: ci.yml
.omc/autopilot/: cross-repo-pr-room-schema.md  dataset-research.md  spec-aconsumer-multiview.md  spec-commercial-research-pull.md  spec.md
.omc/plans/: a3-increment-2a-and-cli-wiring.md  acoustics-ism-upgrade-and-speaker-layout-2026-06-24.md  autopilot-predictor-geometry-ambisonics.md  b1-coverage-grid-design-2026-06-24.md  c1-floater-robust-autoselect.md  c2-polygon-ism-rt60-cascade.md  cand3-ambisonics-impl.md  ceiling-confidence-flag.md  cold-review-fix-cycle.md  commercial-push-triage.md  commercialization-analysis.md  commercialization-followups-3candidates.md  commercialization-followups-4candidates.md  data-unblock-validation-cycle.md  decisions.md  diffrir-nonshoebox-validation.md  feature-expansion-roadmap.md  footprint-occupancy-rt60-cycle.md  image-backend-honesty-followups.md  image-backend-single-pano-build.md  moge-image-backend.md  multi-room-roomcollection.md  open-questions.md  oq59-floor-frontend-spike.md  phase1-predictor-design.md  phase2-alphashape-design.md  phase4-ambisonics-design.md  phaseB-occupancy-footprint-design.md  phaseC-polygon-ism-rt60-design.md  ralplan-iter1-resolutions.md  research-usable-techniques-2026-06-23.md  rir-auralization-phase-a.md  rir-estimation-roadmap.md  robust-footprint-and-ceiling-confidence-fix.md  roomestim-backlog.md  roomestim-v0-design.md  three-candidate-autopilot.md  v0.1.1-closeout.md  v0.10-design.md  v0.10.1-patch.md  (+59 more)
docs/: ace_geometry_audit_2026-05-07.md  architecture.md  competitive_analysis_2026-05-05.md  perf_verification_2026-05-04.md  perf_verification_a10_soundcam_2026-05-10.md  perf_verification_a10a_soundcam_2026-05-09.md  perf_verification_e2e_2026-05-06.md  perf_verification_e2e_2026-05-07.md  perf_verification_e2e_2026-05-08.md  perf_verification_lecture2_bracket_2026-05-09.md  project_status_and_roadmap_2026-05-29.md  protocol_a10b_insitu_capture.md  room_yaml_spec.md  weekly_progress_report_2026-05-11.md  weekly_progress_report_2026-05-17.md
docs/adr/: 0001-capture-backend-priority.md  0002-room-representation.md  0003-placement-algorithm-priority.md  0004-room-yaml-schema-lockin.md  0005-tech-stack.md  0007-distribution-model.md  0008-octave-band-absorption.md  0009-eyring-parallel-predictor.md  0010-ace-geometry-verified-arxiv.md  0011-misc-soft-enum.md  0012-eaton-taslp-materials-not-in-paper.md  0013-taslp-misc-soft-surface-budget.md  0014-building-lobby-coupled-space-exclusion.md  0015-lecture-2-ceiling-seat-bracketing.md  0016-stage2-schema-flip-via-substitute.md  0017-a10-layout-deferred-non-substitutable.md  0018-soundcam-substitute-disagreement-record.md  0019-melamine-foam-enum-addition.md  0020-ci-lint-tense-policy.md  0021-sabine-shoebox-residual-study.md  0024-web-demo-separate-package.md  0025-binaural-demo-stack.md  0026-hrtf-dataset-selection.md  0027-mesh-format-generalisation.md  0028-hardwall-closure-and-ism-adoption.md  0029-web-data-autofetch.md  0030-predictor-default-switch-status-updates.md  0030-predictor-default-switch.md  0031-material-override-policy.md  0032-blueprint-2d-export.md  0033-engine-validation-toggle.md  0034-object-schema.md  0035-mesh-export-policy.md  0036-layout-round-trip-nudge.md  0037-wall-index-reference-frame.md  0038-input-resource-bounds.md  0039-adr-status-update-split-mechanism.md  (+24 more)
proto/: room_schema.draft.json  room_schema.json  room_schema.v0_2.draft.json
roomestim/: __init__.py  __main__.py  cli.py  collection.py  coords.py  edit.py  model.py
roomestim/place/: wfs.py  (+13 more)
roomestim_server/: __init__.py  app.py  errors.py  rooms.py  schemas.py  service.py
roomestim_web/: __init__.py  app.py  archive.py  binaural.py  hrtf_io.py  immersive_design.py  late_reverb.py  material_override.py  material_palette.py  object_add.py  pipeline.py  provenance.py  report.py  rir.py  setup_pdf.py  speaker_nudge.py  viewer.py
scripts/: fetch_web_data.py  gen_usdz_fixtures.py  lint_tense.py
tests/: conftest.py  test_a10a_soundcam_corner.py  test_a11_soundcam_rt60.py  test_acceptance_lab_room.py  test_ace_geometry_audit.py  test_aconsumer_multiview.py  test_adapter_image.py  test_adapter_mesh.py  test_adapter_polycam.py  test_adapter_protocol.py  test_adapter_roomplan.py  test_ambisonics_placement.py  test_cli_edit.py  test_cli_export_formats.py  test_cli_idempotent.py  test_cli_image_backend.py  test_cli_input_validation.py  test_cli_multiview_scale_anchor.py  test_cli_wfs_ergonomics.py  test_collection_cli.py  test_collection_offsets_gltf.py  test_collection_roundtrip.py  test_collection_usd.py  test_coords_engine_parity.py  test_coords_roundtrip.py  test_coverage_complete.py  test_coverage_grid.py  test_coverage_overlap.py  test_dome_placement.py  test_e2e_ace_challenge_rt60.py  test_edit_placement.py  test_edit_room.py  test_engine_roundtrip.py  test_engine_toggle.py  test_evaluate_layout_cli.py  test_export_layout_yaml.py  test_export_room_yaml.py  test_export_round_trip.py  test_eyring_per_surface_alpha.py  test_furniture_acoustic.py  (+53 more)
(+140 files in other folders)
