[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roomestim"
version = "0.23.1"
description = "Capture-to-config tool: room scan -> RoomModel + speaker placement -> spatial_engine YAMLs"
requires-python = ">=3.10"
authors = [{ name = "paiiek" }]
dependencies = [
    "numpy>=1.24",
    "pyyaml>=6",
    "jsonschema>=4",
    "shapely>=2.0",
    "scipy>=1.10",
    "trimesh>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-mock",
    "hypothesis>=6",
    "ruff>=0.5",
    "mypy>=1.8",
]
web = [
    # OQ-45 / ADR 0038: floor bumps are DECLARATION-ONLY — they widen the
    # `pip install` contract forward (pulling gradio's transitive starlette /
    # aiohttp / pillow / requests / urllib3 floors past the audit-flagged CVE
    # lines) without forcing a downgrade. The gradio floor stays ≤ the installed
    # 6.14.0 so the canonical env is unaffected (RT60 byte-equal proves it).
    # requests/urllib3/pillow are transitive (no direct import in this repo;
    # fetch_web_data uses stdlib urllib.request) → left to gradio's pins; an
    # explicit CI pip-audit + lockfile is deferred to OQ-46.
    "gradio>=4.44",
    "plotly>=5.18",
    "pyroomacoustics>=0.7",
    "pysofaconventions>=0.1",
    "reportlab>=4.0",
    "soundfile>=0.12",
]
viz = ["matplotlib>=3.7"]
usd = ["usd-core>=24.0; python_version >= '3.10'"]
mesh-export = ["usd-core>=24.0; python_version >= '3.10'"]
colmap = ["pycolmap>=0.6"]

[project.scripts]
roomestim = "roomestim.cli:main"

[tool.setuptools.packages.find]
include = ["roomestim*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
roomestim = ["proto/*.json"]

[tool.pytest.ini_options]
markers = [
    "lab: requires lab_real.usdz fixture; skipped in default CI",
    "e2e: end-to-end pipeline against external GT dataset (env-var gated)",
    "network: marker reserved for tests that may fetch over network (currently no test invokes it; gate is local-dir env var)",
    "web: requires the [web] optional extras (Gradio, pyroomacoustics, HRTF data); excluded from default CI",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
files = ["roomestim"]
