[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roomestim"
version = "0.30.0"
description = "Capture-to-config tool: room scan -> RoomModel + speaker placement -> spatial_engine YAMLs"
requires-python = ">=3.10"
authors = [{ name = "paiiek" }]
dependencies = [
    "numpy>=1.24",
    "pyyaml>=6",
    "jsonschema>=4",
    "shapely>=2.0",
    "scipy>=1.10",
    "trimesh>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-mock",
    "hypothesis>=6",
    "ruff>=0.5",
    "mypy>=1.8",
]
web = [
    # OQ-45 / ADR 0038: floor bumps are DECLARATION-ONLY — they widen the
    # `pip install` contract forward (pulling gradio's transitive starlette /
    # aiohttp / pillow / requests / urllib3 floors past the audit-flagged CVE
    # lines) without forcing a downgrade. The gradio floor stays ≤ the installed
    # 6.14.0 so the canonical env is unaffected (RT60 byte-equal proves it).
    # requests/urllib3/pillow are transitive (no direct import in this repo;
    # fetch_web_data uses stdlib urllib.request) → left to gradio's pins; an
    # explicit CI pip-audit + lockfile is deferred to OQ-46.
    "gradio>=4.44",
    "plotly>=5.18",
    "pyroomacoustics>=0.7",
    "pysofaconventions>=0.1",
    "reportlab>=4.0",
    "soundfile>=0.12",
]
viz = ["matplotlib>=3.7"]
usd = ["usd-core>=24.0; python_version >= '3.10'"]
mesh-export = ["usd-core>=24.0; python_version >= '3.10'"]
colmap = ["pycolmap>=0.6"]
vision = [
    # ADR 0045: image->geometry inference (vendored HorizonNet). These deps are
    # behind an OPT-IN extra and are NEVER imported at `import roomestim` time so
    # the core/web boundary (gate #4) stays torch-free. The canonical miniforge
    # env ships a broken torchvision, so the vision PATH is skipped in the gate
    # and smoke-tested out-of-gate against a working torch+torchvision venv.
    "torch",
    "torchvision",
    "Pillow",
    "huggingface_hub",
    "gdown",
    # vendored HorizonNet inference path deps: post_proc.py uses sklearn PCA;
    # panostretch.py viz helpers use cv2 (function-level). Declared so a clean
    # `pip install roomestim[vision]` does not ModuleNotFoundError at run time.
    "scikit-learn",
    "opencv-python",
]

[project.scripts]
roomestim = "roomestim.cli:main"

[tool.setuptools.packages.find]
include = ["roomestim*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
roomestim = ["proto/*.json", "vision/horizonnet/LICENSE", "vision/horizonnet/NOTICE"]

[tool.pytest.ini_options]
markers = [
    "lab: requires lab_real.usdz fixture; skipped in default CI",
    "e2e: end-to-end pipeline against external GT dataset (env-var gated)",
    "network: marker reserved for tests that may fetch over network (currently no test invokes it; gate is local-dir env var)",
    "web: requires the [web] optional extras (Gradio, pyroomacoustics, HRTF data); excluded from default CI",
    "vision: requires the [vision] extra (torch+torchvision+HorizonNet weights); excluded from default CI",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
# Vendored HorizonNet inference code (MIT, (c) 2019 Cheng Sun) is kept verbatim
# and exempt from roomestim lint rules; our own vision code is NOT excluded.
extend-exclude = ["roomestim/vision/horizonnet"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["roomestim"]

# The vendored HorizonNet inference code (MIT, (c) 2019 Cheng Sun) is kept
# verbatim and is not expected to pass roomestim's strict mypy; our own vision
# code (checkpoints.py) is NOT excluded and must pass strict.
[[tool.mypy.overrides]]
module = "roomestim.vision.horizonnet.*"
ignore_errors = true

# Pixar USD (``pxr``) ships no type stubs / py.typed marker. It is an optional
# extra ([usd]) lazily imported behind a friendly ImportError, so silence the
# missing-stub noise whether or not usd-core is installed in the type-check env.
[[tool.mypy.overrides]]
module = "pxr.*"
ignore_missing_imports = true
