[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roomestim"
version = "0.61.0"
description = "Capture-to-config tool: room scan -> RoomModel + speaker placement -> spatial_engine YAMLs"
requires-python = ">=3.10"
authors = [{ name = "paiiek" }]
# setuptools 70.x (installed) predates PEP 639 SPDX-string support (lands in
# setuptools 77), so the classic table form is used; the License classifier
# below carries the same MIT signal for indexers. NOTE: the MIT license covers
# roomestim's OWN code only. Vendored HorizonNet code (roomestim/vision/
# horizonnet/) keeps its own MIT (c) 2019 Cheng Sun, and the optional [vision]
# pretrained WEIGHTS are academic/NON-COMMERCIAL per that dir's NOTICE — weights
# are not distributed here. See ./LICENSE and roomestim/vision/horizonnet/NOTICE.
license = { text = "MIT" }
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "pyyaml>=6",
    "jsonschema>=4",
    "shapely>=2.0",
    "scipy>=1.10",
    "trimesh>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-mock",
    "hypothesis>=6",
    "ruff>=0.5",
    "mypy>=1.8",
]
web = [
    # OQ-45 / ADR 0038: floor bumps are DECLARATION-ONLY — they widen the
    # `pip install` contract forward (pulling gradio's transitive starlette /
    # aiohttp / pillow / requests / urllib3 floors past the audit-flagged CVE
    # lines) without forcing a downgrade. The gradio floor stays ≤ the installed
    # 6.14.0 so the canonical env is unaffected (RT60 byte-equal proves it).
    # requests/urllib3/pillow are transitive (no direct import in this repo;
    # fetch_web_data uses stdlib urllib.request) → left to gradio's pins; an
    # explicit CI pip-audit + lockfile is deferred to OQ-46.
    "gradio>=4.44",
    "plotly>=5.18",
    "pyroomacoustics>=0.7",
    "pysofaconventions>=0.1",
    "reportlab>=4.0",
    "soundfile>=0.12",
]
viz = ["matplotlib>=3.7"]
audio = [
    # A3: measured (blind) RT60 from a recording. blind-rt60 (MIT, PyPI v0.1.1;
    # Ratnam et al. ML decay model) + soundfile for file I/O. NEVER imported at
    # `import roomestim` time (roomestim/reconstruct/measured_rt60.py lazy-imports
    # both inside its functions) so the core boundary stays dependency-light.
    "blind-rt60>=0.1.1",
    "soundfile>=0.12",
]
server = [
    # P5.1 / ADR 0061: optional FastAPI REST server (roomestim_server) over the
    # frozen P3 trade-off engine. ALL deps are permissive + pure-Python:
    #   fastapi   = MIT   uvicorn   = BSD-3   starlette = BSD-3 (fastapi dep)
    #   pydantic  = MIT (fastapi dep)         httpx     = BSD-3
    # No GPL/AGPL/NC transitive surprises (confirmed in ADR 0061). httpx is the
    # transport TestClient uses and is required for the in-gate server tests, so
    # it lives in this extra rather than a separate test-only one.
    #
    # BOUNDARY: fastapi is NEVER imported at `import roomestim` or
    # `import roomestim_server` time — only when `roomestim_server.create_app()`
    # is actually called (lazy import inside the factory). The torch-free,
    # fastapi-free core boundary is gate-enforced.
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
]
usd = ["usd-core>=24.0; python_version >= '3.10'"]
mesh-export = ["usd-core>=24.0; python_version >= '3.10'"]
colmap = ["pycolmap>=0.6"]
moge = [
    # ADR 0057: metric single-image geometry backend (Microsoft MoGe). Outputs a
    # METRIC point map + FoV from one perspective RGB image with NO camera-height
    # assumption (the dominant error lever of the HorizonNet [vision] backend).
    #
    # LICENSE (commercial advantage over [vision]): the MoGe code is MIT and the
    # released weights are MIT/Apache-2.0 (github.com/microsoft/MoGe) — COMMERCIALLY
    # CLEAN, UNLIKE the [vision] HorizonNet pretrained weights, which are
    # academic/NON-COMMERCIAL (see the license note near the HorizonNet block).
    #
    # PACKAGING HONESTY: MoGe is NOT published on PyPI (no `moge` distribution), so
    # this extra installs from a git ref. That means `pip install roomestim[moge]`
    # is NOT PyPI-wheel-installable on its own — it requires the git source — and
    # therefore this extra is excluded from the PyPI-publishability contract
    # (ADR 0007); core `roomestim` stays PyPI-clean. Weights (~1-2 GB) download on
    # first use via huggingface_hub into the per-user HF cache (not vendored).
    #
    # BOUNDARY: torch + MoGe are NEVER imported at `import roomestim` /
    # `import roomestim.adapters.moge` time (lazy-imported inside the inference
    # helper), so the torch-free core/web boundary (gate #4) is preserved. The
    # canonical miniforge env ships a broken torchvision, so the MoGe PATH is
    # marker-skipped in the default gate and run out-of-gate against a working
    # torch venv (same posture as [vision]).
    "moge @ git+https://github.com/microsoft/MoGe.git",
    "torch",
    "Pillow",
    "huggingface_hub",
]
vision = [
    # ADR 0045: image->geometry inference (vendored HorizonNet). These deps are
    # behind an OPT-IN extra and are NEVER imported at `import roomestim` time so
    # the core/web boundary (gate #4) stays torch-free. The canonical miniforge
    # env ships a broken torchvision, so the vision PATH is skipped in the gate
    # and smoke-tested out-of-gate against a working torch+torchvision venv.
    "torch",
    "torchvision",
    "Pillow",
    "huggingface_hub",
    "gdown",
    # vendored HorizonNet inference path deps: post_proc.py uses sklearn PCA;
    # panostretch.py viz helpers use cv2 (function-level). Declared so a clean
    # `pip install roomestim[vision]` does not ModuleNotFoundError at run time.
    "scikit-learn",
    "opencv-python",
]

[project.urls]
# Only the real git remote is listed — no Homepage/Docs URL is invented for a
# repo that has no published project site yet (honesty over placeholder links).
Repository = "https://github.com/paiiek/roomestim"

[project.scripts]
roomestim = "roomestim.cli:main"

[tool.setuptools.packages.find]
include = ["roomestim*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
roomestim = ["proto/*.json", "vision/horizonnet/LICENSE", "vision/horizonnet/NOTICE", "py.typed"]
# py.typed: PEP 561 marker — roomestim is mypy --strict clean across 63 files;
# the marker advertises types to the named downstream consumer spatial_engine.
# Last pre-publish code gap in ADR 0007.

[tool.pytest.ini_options]
markers = [
    "lab: requires lab_real.usdz fixture; skipped in default CI",
    "e2e: end-to-end pipeline against external GT dataset (env-var gated)",
    "network: marker reserved for tests that may fetch over network (currently no test invokes it; gate is local-dir env var)",
    "web: requires the [web] optional extras (Gradio, pyroomacoustics, HRTF data); excluded from default CI",
    "vision: requires the [vision] extra (torch+torchvision+HorizonNet weights); excluded from default CI",
    "moge: requires the [moge] extra (torch + MoGe weights, git-only); excluded from default CI",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
# Vendored HorizonNet inference code (MIT, (c) 2019 Cheng Sun) is kept verbatim
# and exempt from roomestim lint rules; our own vision code is NOT excluded.
extend-exclude = ["roomestim/vision/horizonnet"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["roomestim"]

# The vendored HorizonNet inference code (MIT, (c) 2019 Cheng Sun) is kept
# verbatim and is not expected to pass roomestim's strict mypy; our own vision
# code (checkpoints.py) is NOT excluded and must pass strict.
[[tool.mypy.overrides]]
module = "roomestim.vision.horizonnet.*"
ignore_errors = true

# Pixar USD (``pxr``) ships no type stubs / py.typed marker. It is an optional
# extra ([usd]) lazily imported behind a friendly ImportError, so silence the
# missing-stub noise whether or not usd-core is installed in the type-check env.
[[tool.mypy.overrides]]
module = "pxr.*"
ignore_missing_imports = true

# blind-rt60 + soundfile ([audio] extra) ship no type stubs / py.typed marker.
# Both are lazily imported behind a friendly ImportError in
# roomestim/reconstruct/measured_rt60.py, so silence the missing-stub noise
# whether or not the extra is installed in the type-check env.
[[tool.mypy.overrides]]
module = ["blind_rt60.*", "soundfile.*"]
ignore_missing_imports = true

# Microsoft MoGe ([moge] extra, ADR 0057) ships no type stubs / py.typed marker
# and is git-only. It is lazily imported behind a friendly ImportError inside
# roomestim/adapters/moge.py, so silence the missing-stub noise whether or not
# the extra is installed in the type-check env. (torch is typed via [vision].)
[[tool.mypy.overrides]]
module = "moge.*"
ignore_missing_imports = true
